# svn-mirror

./: .gitignore  .travis.yml  README.md  svn-instructions.txt
vice/: .gitignore  AUTHORS  BUGS  CHANGES  COPYING  ChangeLog  ChangeLog.1  ChangeLog.2  Doxyfile  FEEDBACK  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  WiiConfigure.sh  Wiiconfig.h  Wiiconfigure  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  build.minix  check-activity.sh  cmake-bootstrap.sh  config.guess  config.rpath  config.sub  configure  configure.ac  configure.in  configure.proto  gcccpu.sh  gdkkeysyms.sh  gtk3-resources.py  make_vice_git.py  tag_monster.py  uiactionlist.py  vice-gtk.spec  (+6 more)
vice/data/: .gitignore  Makefile.am  Makefile.in  c64mem.sym
vice/data/C128/: Makefile.am  Makefile.in  amiga_pos.vkm  amiga_sym.vkm  beos_pos.vkm  beos_sym.vkm  c64hq.vpl  c64s.vpl  default.vkm  default.vpl  default.vrs  dos_pos.vkm  dos_sym.vkm  frodo.vpl  gtk3-hotkeys-mac.vhk  gtk3-hotkeys.vhk  gtk3_keyrahv3.vkm  gtk3_keyrahv3_de.vkm  gtk3_pos.vkm  gtk3_pos_de.vkm  gtk3_pos_se.vkm  gtk3_sym.vkm  gtk3_sym_de.vkm  gtk3_sym_fr.vkm  gtk3_sym_se.vkm  lemon64.vpl  os2.vkm  osx_pos.vkm  osx_sym.vkm  palette.vpl  palette_6569R1_v1r.vpl  pc64.vpl  pepto-palold.vpl  pixcen.vpl  position.vkm  ptoing.vpl  rgb.vpl  sdl-hotkeys-mac.vhk  sdl-hotkeys.vhk  sdl_hotkeys.vkm  (+18 more)
vice/data/C610/: Makefile.am  Makefile.in  busi_uk.vkm
vice/data/C64/: Makefile.am  Makefile.am~  Makefile.in  amiga_sym.vkm  beos_pos.vkm  beos_sym.vkm  c64hq.vpl  c64s.vpl  ccs64.vpl  cjam.vpl  colodore.vpl  community-colors.vpl  deekay.vpl  default.vkm  dos_pos.vkm  dos_sym.vkm  gtk3-hotkeys-mac.vhk  gtk3-hotkeys.vhk  gtk3-vsid-hotkeys-mac.vhk  gtk3-vsid-hotkeys.vhk  gtk3-winvice-legacy.vhk  gtk3_keyrah.vkm  gtk3_keyrah_de.vkm  gtk3_pos.vkm  gtk3_pos_bmc64.vkm  gtk3_pos_de.vkm  gtk3_pos_es.vkm  gtk3_pos_se.vkm  gtk3_sym.vkm  gtk3_sym_da.vkm  gtk3_sym_de.vkm  gtk3_sym_fr.vkm  gtk3_sym_it.vkm  gtk3_sym_nl.vkm  gtk3_sym_se.vkm  gtk3_sym_tr.vkm  gtk3_sym_uk.vkm  gtk3_the64_de.vkm  joymap_logitech_x3dpro.vjm  joymap_ps3.vjm  (+68 more)
vice/data/C64DTV/: Makefile.am  ROdflt.vkm  amiga_pos.vkm  beos_pos.vkm  beos_sym.vkm  default.vrs  dos_sym.vkm  frodo.vpl  godot.vpl  gtk3-hotkeys-mac.vhk  gtk3-hotkeys.vhk  gtk3_keyrah.vkm  gtk3_keyrah_de.vkm  gtk3_pos.vkm  gtk3_pos_bmc64.vkm  gtk3_pos_de.vkm  gtk3_pos_es.vkm  gtk3_pos_it.vkm  gtk3_pos_se.vkm  gtk3_pos_tr.vkm  gtk3_pos_uk.vkm  gtk3_sym.vkm  gtk3_sym_da.vkm  gtk3_sym_de.vkm  gtk3_sym_fr.vkm  gtk3_sym_it.vkm  gtk3_sym_nl.vkm  gtk3_sym_se.vkm  gtk3_the64_de.vkm  osx_pos.vkm  osx_sym_de.vkm  osx_sym_us.vkm  sdl-hotkeys-mac.vhk  sdl-hotkeys.vhk  sdl_c64p.vkm  sdl_hotkeys.vkm  sdl_keyrah.vkm  sdl_keyrah_combian.vkm  sdl_keyrah_de.vkm  sdl_keyrah_retropie.vkm  (+24 more)
vice/data/CBM-II/: Makefile.am  Makefile.in  ROdflt.vkm  amber.vpl  amiga_bukp.vkm  amiga_buks.vkm  beos_bukp.vkm  beos_buks.vkm  busi_uk.vkm  c64hq.vpl  c64s.vpl  ccs64.vpl  cjam.vpl  community-colors.vpl  dos_bukp.vkm  dos_buks.vkm  godot.vpl  green.vpl  gtk3-hotkeys-mac.vhk  gtk3-hotkeys.vhk  gtk3_pos.vkm  gtk3_pos_de.vkm  gtk3_sym.vkm  gtk3_sym_de.vkm  os2.vkm  osx_pos_uk.vkm  palette.vpl  palette_6569R5_v1r.vpl  palette_C64_cyan.vpl  pepto-ntsc-sony.vpl  pepto-ntsc.vpl  pepto-pal.vpl  pixcen.vpl  rgb.vpl  rom128h.vrs  rom128l.vrs  rom256h.vrs  rom256l.vrs  rom500.vrs  sdl-hotkeys-mac.vhk  (+13 more)
vice/data/DRIVES/: Makefile.am  Makefile.in  dos1541  dos4000  dos9000
vice/data/GLSL/: Makefile.am  bicubic-interlaced.frag  bicubic.frag  builtin-interlaced.frag  builtin.frag  viewport.vert
vice/data/PET/: 2001-blueish.vpl  Makefile.am  Makefile.in  RObusi.vkm  ROgrph.vkm  amber.vpl  amiga_buks.vkm  amiga_grus_sym.vkm  beos_bgrs.vkm  beos_buks.vkm  busi_de.vkm  busi_uk.vkm  default.vrs  dos_bgrs.vkm  dos_buks.vkm  graphics.vkm  green.vpl  gtk3-hotkeys-mac.vhk  gtk3-hotkeys.vhk  gtk3_bude_pos.vkm  gtk3_bude_pos_de.vkm  gtk3_bude_sym.vkm  gtk3_bude_sym_de.vkm  gtk3_buuk_pos.vkm  gtk3_buuk_pos_de.vkm  gtk3_buuk_sym.vkm  gtk3_buuk_sym_de.vkm  gtk3_grus_pos.vkm  gtk3_grus_pos_de.vkm  gtk3_grus_sym.vkm  gtk3_grus_sym_de.vkm  gtk3_pos.vkm  gtk3_sym.vkm  os2.vkm  os2_40.vkm  posg_de.vkm  rom1.vrs  rom1g.vrs  rom2b.vrs  rom2g.vrs  (+39 more)
vice/doc/: CIA-README.txt  Documentation-Howto.txt  Doxyfile  Doxyfile.archdep  Doxyfile.gtk3  Doxygen-Howto.txt  Evaluation  GP2X-Howto.txt  MANUAL.html  MSDOS-Ethernet-Howto.txt  MSDOS-Howto.txt  MacOSX-ResourceTree.txt  Makefile.am  Makefile.in  MinixVmd-Howto.txt  NLS-Howto.txt  OpenVMS-Howto.txt  PETdoc  PETdoc.txt  Readme.beos  Readme.dos  ReadmeMacOSX.txt  ReadmeSDL.txt  Release-Howto.txt  SDL-support.txt  Win32-Cygwin-HOWTO.txt  Win32-Howto.txt  WinNT-Unicode.txt  cartconv.txt  checkdoc.c  checkdoc.mak  checkdoc.mon  coding-guidelines.txt  commandline-checking.txt  delaep64.pl  drive_info.txt  ffmpeg-support.txt  fixdates.sh  fixdox.sh  g64.txt  (+41 more)
vice/intl/: Makefile.in
vice/m4/: quiet_cc.m4  vice_args.m4  vice_compiler_checks.m4
vice/man/: Makefile.am  Makefile.in  c1541.1  c1541.cat  cartconv.1  petcat.1  petcat.cat  petcat.man  vice.1  vice.cat
vice/po/: ChangeLog  Makefile.in.in  POTFILES.in  cat-id-tbl.c  check_obsolete.sh  da.po  de.gmo  de.po  es.po  fr.gmo  fr.po  gen_amiga_intl_c.c  gen_translate_c.c  gen_win32_files.sh  gen_win32_rc.c  hu.gmo  hu.po  intl2po.c  it.gmo  it.po  ko.po  nl.gmo  nl.po  pl.gmo  pl.po  po2table.c  ru.po  sv.gmo  sv.po  tr.po  translations-status.txt  vice.pot
vice/run/: README.RUN  cbm16.bdf  cbm8.bdf  fonts.dir  x64run  xpetrun  xvicrun
vice/src/: .gitignore  1541cpu.c  6510core.c  6510core.h  6510dtvcore.c  65816core.c  65c02core.c  ChangeLog  ChangeLog.1  ChangeLog.3  Makefile.am  Makefile.in  acia-tmpl.c  acia.h  aciacore.c  alarm.c  alarm.h  alloca.c  archapi.h  asm.c  asm.h  atomic.h  attach.c  attach.h  autostart-prg.c  autostart-prg.h  autostart.c  autostart.h  bin2c.c  bin2c.sh  blockdev.h  c128ui.h  c1541-stubs.c  c1541.c  c1541.dsp  c1541.h  c64ui.h  cartconv.c  cartio.h  cartridge.c  (+348 more)
vice/utils/: INDEX  dsk2infocom.c  recomment  rmshm  rmshm.linux  toiso  tounix  xkeymaped.tar.Z
(+8483 files in other folders)
